Cambio de presentación raíz
Se cambia la presentación y se agrega el título en historial

--- a/Local/views/raiz.ejs
+++ b/Local/views/raiz.ejs
@@ -4,8 +4,9 @@
   <div class="card">
     <h5 class="card-header"><%= titulo %></h5>
     <div class="card-body">
-      <h5 class="card-title">Arkon Data</h5>
-      <p class="card-text">¡Hola! Mi nombre es Madrid Gutiérrez Hernández.</p>
+      <h5 class="card-title">Data Pipeline</h5>
+      <p class="card-text">Metrobús CDMX</p>
+      <p class="fst-italic align-text-bottom text-end">Mi developer es Madrid</p>
     </div>
   </div>
 </div>
