--- a/Docker/views/buscarHistorial.ejs
+++ b/Docker/views/buscarHistorial.ejs
@@ -1,5 +1,9 @@
 <%- include("template/cabecera", {titulo: "Búscar historial"}) %>
 
+<div class="mt-3 d-flex justify-content-center">
+    <h1>Historial de ubicación por id</h1>
+</div>
+
 <div class="container mt-5">
     <div class="row">
         <div class="col-md-6 offset-md-3">
@@ -12,20 +16,19 @@
     </div>
 </div>
 
-
-    <table id="historialTable" class="table table-bordered mt-5" style="text-align:center">
-        <thead>
-            <tr>
-            <th>Id Vehículo</th>
-            <th>Geographic_point</th>
-            <th>Alcaldía</th>
-            </tr>
-        </thead>
-        <tbody id="historialTableBody">  
-        </tbody>
-    </table>
-    <div id="alert">
-    </div>
+<table id="historialTable" class="table table-bordered mt-5" style="text-align:center">
+    <thead>
+        <tr>
+        <th>Id Vehículo</th>
+        <th>Geographic_point</th>
+        <th>Alcaldía</th>
+        </tr>
+    </thead>
+    <tbody id="historialTableBody">  
+    </tbody>
+</table>
+<div id="alert">
+</div>
 
     
 
